更新微信app，扫码支付

--- a/composer.json
+++ b/composer.json
@@ -19,12 +19,17 @@
     "johnxu/tool": "*",
     "ext-openssl": "*",
     "ext-json": "*",
-    "ext-mbstring": "*"
+    "ext-mbstring": "*",
+    "ext-simplexml": "*",
+    "ext-libxml": "*"
   },
   "require-dev": {},
   "autoload": {
     "psr-4": {
       "johnxu\\payment\\": "src/"
-    }
+    },
+    "files": [
+      "src/phpqrcode/phpqrcode.php"
+    ]
   }
 }
