--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     "ext-json": "*",
     "ext-mbstring": "*",
     "ext-simplexml": "*",
-    "ext-libxml": "*"
+    "ext-libxml": "*",
+    "johnxu/pay": "^1.0"
   },
   "require-dev": {},
   "autoload": {
